--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
     "@urql/core": "^2.5.0",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -28,6 +29,7 @@
     "@remix-run/eslint-config": "^1.5.1",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "concurrently": "^6.5.1",
