--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "graphql-codegen": "graphql-codegen"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.4",
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
     "@urql/core": "^2.5.0",
+    "clsx": "^1.1.1",
     "numeral": "^2.0.6",
+    "ramda": "^0.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -30,6 +33,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/numeral": "^2.0.2",
+    "@types/ramda": "^0.28.14",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
     "concurrently": "^6.5.1",
