--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/node": "^1.5.1",
     "@remix-run/react": "^1.5.1",
     "@remix-run/serve": "^1.5.1",
+    "@tabler/icons": "^1.68.0",
     "@urql/core": "^2.5.0",
     "clsx": "^1.1.1",
     "numeral": "^2.0.6",
